--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mongoose": "4.9.2",
     "morgan": "1.8.1",
     "multer": "0.1.8",
+    "node-fetch": "^1.6.3",
     "numeral": "2.0.6",
     "object-assign": "4.1.1",
     "qs": "4.0.0",
